# Text-Extraction-C

./: CMakeLists.txt  README.md  Swagger-Docs.json  main.cpp
include/Core/: Entity.h  IRepository.h
include/Presentation/: Views.h
include/Presentation/View/: MainView.hpp
include/Presentation/ViewModel/: MainViewModel.h
include/Services/: ApiService.h  LoginService.h
include/UI/: Sidebar.h  Widget.h
include/UseCases/: ExtractTextUseCase.h
include/UseCases/impl/: ExtractTextUseCase_impl.h
src/: main.cpp
src/Services/: ApiService.cpp  LoginService.cpp
src/UI/: Sidebar.cpp  Widget.cpp
src/UseCases/: ExtractTextUseCase.cpp
src/ViewModels/: MainViewModel.cpp
src/Views/: MainView.cpp
